pp2/y.output
Terminals unused in grammar

   T_NullConstant


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 Decl: VarDecl
    3     | FnDecl
    4     | ClassDecl
    5     | InterfaceDecl

    6 DeclList: DeclList Decl
    7         | Decl

    8 VarDecl: Variable ';'

    9 VarDecls: VarDecls VarDecl
   10         | %empty

   11 Variable: Type T_Identifier

   12 Type: T_Int
   13     | T_Double
   14     | T_Bool
   15     | T_String
   16     | T_Identifier
   17     | Type T_Dims

   18 FnDecl: FnHeader StmtBlock

   19 FnHeader: Type T_Identifier '(' Formals ')'
   20         | T_Void T_Identifier '(' Formals ')'

   21 Formals: FormalList
   22        | %empty

   23 FormalList: FormalList ',' Variable
   24           | Variable

   25 ClassDecl: T_Class T_Identifier ExtendOption ImplementOpt '{' FieldList '}'

   26 ExtendOption: T_Extends T_Identifier
   27             | %empty

   28 ImplementOpt: T_Implements ImplementList
   29             | %empty

   30 ImplementList: ImplementList ',' T_Identifier
   31              | T_Identifier

   32 Field: VarDecl
   33      | FnDecl

   34 FieldList: FieldList Field
   35          | %empty

   36 InterfaceDecl: T_Interface T_Identifier '{' PrototypeList '}'

   37 PrototypeList: PrototypeList FnHeader ';'
   38              | %empty

   39 StmtBlock: '{' VarDecls StmtList '}'

   40 StmtList: Stmt StmtList
   41         | %empty

   42 Stmt: OptExpr ';'
   43     | IfStmt
   44     | WhileStmt
   45     | ForStmt
   46     | BreakStmt
   47     | ReturnStmt
   48     | PrintStmt
   49     | StmtBlock

   50 OptExpr: Expr
   51        | %empty

   52 IfStmt: IfThenStmt
   53       | IfElseStmt

   54 IfThenStmt: T_If '(' Expr ')' Stmt

   55 IfElseStmt: T_If '(' Expr ')' Stmt T_Else Stmt

   56 WhileStmt: T_While '(' Expr ')' Stmt

   57 ForStmt: T_For '(' OptExpr ';' Expr ';' OptExpr ')' Stmt

   58 ReturnStmt: T_Return OptExpr ';'

   59 BreakStmt: T_Break ';'

   60 PrintStmt: T_Print '(' ExprList ')' ';'

   61 Expr: LValue '=' Expr
   62     | Constant
   63     | LValue
   64     | T_This
   65     | Call
   66     | '(' Expr ')'
   67     | Expr '+' Expr
   68     | Expr '-' Expr
   69     | Expr '*' Expr
   70     | Expr '/' Expr
   71     | Expr '%' Expr
   72     | '-' Expr
   73     | Expr '<' Expr
   74     | Expr T_LessEqual Expr
   75     | Expr '>' Expr
   76     | Expr T_GreaterEqual Expr
   77     | Expr T_Equal Expr
   78     | Expr T_NotEqual Expr
   79     | Expr T_And Expr
   80     | Expr T_Or Expr
   81     | '!' Expr
   82     | Expr T_Inc
   83     | Expr T_Dec
   84     | T_ReadInteger '(' ')'
   85     | T_ReadLine '(' ')'
   86     | T_New '(' T_Identifier ')'
   87     | T_NewArray '(' Expr ',' Type ')'

   88 ExprList: ExprList ',' Expr
   89         | Expr

   90 LValue: T_Identifier
   91       | Expr '.' T_Identifier
   92       | Expr '[' Expr ']'

   93 Call: T_Identifier '(' Actuals ')'
   94     | Expr '.' T_Identifier '(' Actuals ')'

   95 Actuals: ExprList
   96        | %empty

   97 Constant: T_IntConstant
   98         | T_DoubleConstant
   99         | T_BoolConstant
  100         | T_StringConstant
  101         | T_Null


Terminals, with rules where they appear

$end (0) 0
'!' (33) 81
'%' (37) 71
'(' (40) 19 20 54 55 56 57 60 66 84 85 86 87 93 94
')' (41) 19 20 54 55 56 57 60 66 84 85 86 87 93 94
'*' (42) 69
'+' (43) 67
',' (44) 23 30 87 88
'-' (45) 68 72
'.' (46) 91 94
'/' (47) 70
';' (59) 8 37 42 57 58 59 60
'<' (60) 73
'=' (61) 61
'>' (62) 75
'[' (91) 92
']' (93) 92
'{' (123) 25 36 39
'}' (125) 25 36 39
error (256)
T_Else (258) 55
T_Or (259) 80
T_And (260) 79
T_Equal (261) 77
T_NotEqual (262) 78
T_GreaterEqual (263) 76
T_LessEqual (264) 74
T_Inc (265) 82
T_Dec (266) 83
T_Void (267) 20
T_Bool (268) 14
T_Int (269) 12
T_Double (270) 13
T_String (271) 15
T_Class (272) 25
T_Dims (273) 17
T_Null (274) 101
T_Extends (275) 26
T_This (276) 64
T_Interface (277) 36
T_Implements (278) 28
T_While (279) 56
T_For (280) 57
T_If (281) 54 55
T_Return (282) 58
T_Break (283) 59
T_New (284) 86
T_NewArray (285) 87
T_Print (286) 60
T_ReadInteger (287) 84
T_ReadLine (288) 85
T_Identifier (289) 11 16 19 20 25 26 30 31 36 86 90 91 93 94
T_StringConstant (290) 100
T_IntConstant (291) 97
T_DoubleConstant (292) 98
T_BoolConstant (293) 99
T_NullConstant (294)


Nonterminals, with rules where they appear

$accept (58)
    on left: 0
Program (59)
    on left: 1, on right: 0
Decl (60)
    on left: 2 3 4 5, on right: 6 7
DeclList (61)
    on left: 6 7, on right: 1 6
VarDecl (62)
    on left: 8, on right: 2 9 32
VarDecls (63)
    on left: 9 10, on right: 9 39
Variable (64)
    on left: 11, on right: 8 23 24
Type (65)
    on left: 12 13 14 15 16 17, on right: 11 17 19 87
FnDecl (66)
    on left: 18, on right: 3 33
FnHeader (67)
    on left: 19 20, on right: 18 37
Formals (68)
    on left: 21 22, on right: 19 20
FormalList (69)
    on left: 23 24, on right: 21 23
ClassDecl (70)
    on left: 25, on right: 4
ExtendOption (71)
    on left: 26 27, on right: 25
ImplementOpt (72)
    on left: 28 29, on right: 25
ImplementList (73)
    on left: 30 31, on right: 28 30
Field (74)
    on left: 32 33, on right: 34
FieldList (75)
    on left: 34 35, on right: 25 34
InterfaceDecl (76)
    on left: 36, on right: 5
PrototypeList (77)
    on left: 37 38, on right: 36 37
StmtBlock (78)
    on left: 39, on right: 18 49
StmtList (79)
    on left: 40 41, on right: 39 40
Stmt (80)
    on left: 42 43 44 45 46 47 48 49, on right: 40 54 55 56 57
OptExpr (81)
    on left: 50 51, on right: 42 57 58
IfStmt (82)
    on left: 52 53, on right: 43
IfThenStmt (83)
    on left: 54, on right: 52
IfElseStmt (84)
    on left: 55, on right: 53
WhileStmt (85)
    on left: 56, on right: 44
ForStmt (86)
    on left: 57, on right: 45
ReturnStmt (87)
    on left: 58, on right: 47
BreakStmt (88)
    on left: 59, on right: 46
PrintStmt (89)
    on left: 60, on right: 48
Expr (90)
    on left: 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
    79 80 81 82 83 84 85 86 87, on right: 50 54 55 56 57 61 66 67 68
    69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 87 88 89 91 92 94
ExprList (91)
    on left: 88 89, on right: 60 88 95
LValue (92)
    on left: 90 91 92, on right: 61 63
Call (93)
    on left: 93 94, on right: 65
Actuals (94)
    on left: 95 96, on right: 93 94
Constant (95)
    on left: 97 98 99 100 101, on right: 62


State 0

    0 $accept: . Program $end

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    Program        go to state 9
    Decl           go to state 10
    DeclList       go to state 11
    VarDecl        go to state 12
    Variable       go to state 13
    Type           go to state 14
    FnDecl         go to state 15
    FnHeader       go to state 16
    ClassDecl      go to state 17
    InterfaceDecl  go to state 18


State 1

   20 FnHeader: T_Void . T_Identifier '(' Formals ')'

    T_Identifier  shift, and go to state 19


State 2

   14 Type: T_Bool .

    $default  reduce using rule 14 (Type)


State 3

   12 Type: T_Int .

    $default  reduce using rule 12 (Type)


State 4

   13 Type: T_Double .

    $default  reduce using rule 13 (Type)


State 5

   15 Type: T_String .

    $default  reduce using rule 15 (Type)


State 6

   25 ClassDecl: T_Class . T_Identifier ExtendOption ImplementOpt '{' FieldList '}'

    T_Identifier  shift, and go to state 20


State 7

   36 InterfaceDecl: T_Interface . T_Identifier '{' PrototypeList '}'

    T_Identifier  shift, and go to state 21


State 8

   16 Type: T_Identifier .

    $default  reduce using rule 16 (Type)


State 9

    0 $accept: Program . $end

    $end  shift, and go to state 22


State 10

    7 DeclList: Decl .

    $default  reduce using rule 7 (DeclList)


State 11

    1 Program: DeclList .
    6 DeclList: DeclList . Decl

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 1 (Program)

    Decl           go to state 23
    VarDecl        go to state 12
    Variable       go to state 13
    Type           go to state 14
    FnDecl         go to state 15
    FnHeader       go to state 16
    ClassDecl      go to state 17
    InterfaceDecl  go to state 18


State 12

    2 Decl: VarDecl .

    $default  reduce using rule 2 (Decl)


State 13

    8 VarDecl: Variable . ';'

    ';'  shift, and go to state 24


State 14

   11 Variable: Type . T_Identifier
   17 Type: Type . T_Dims
   19 FnHeader: Type . T_Identifier '(' Formals ')'

    T_Dims        shift, and go to state 25
    T_Identifier  shift, and go to state 26


State 15

    3 Decl: FnDecl .

    $default  reduce using rule 3 (Decl)


State 16

   18 FnDecl: FnHeader . StmtBlock

    '{'  shift, and go to state 27

    StmtBlock  go to state 28


State 17

    4 Decl: ClassDecl .

    $default  reduce using rule 4 (Decl)


State 18

    5 Decl: InterfaceDecl .

    $default  reduce using rule 5 (Decl)


State 19

   20 FnHeader: T_Void T_Identifier . '(' Formals ')'

    '('  shift, and go to state 29


State 20

   25 ClassDecl: T_Class T_Identifier . ExtendOption ImplementOpt '{' FieldList '}'

    T_Extends  shift, and go to state 30

    $default  reduce using rule 27 (ExtendOption)

    ExtendOption  go to state 31


State 21

   36 InterfaceDecl: T_Interface T_Identifier . '{' PrototypeList '}'

    '{'  shift, and go to state 32


State 22

    0 $accept: Program $end .

    $default  accept


State 23

    6 DeclList: DeclList Decl .

    $default  reduce using rule 6 (DeclList)


State 24

    8 VarDecl: Variable ';' .

    $default  reduce using rule 8 (VarDecl)


State 25

   17 Type: Type T_Dims .

    $default  reduce using rule 17 (Type)


State 26

   11 Variable: Type T_Identifier .
   19 FnHeader: Type T_Identifier . '(' Formals ')'

    '('  shift, and go to state 33

    $default  reduce using rule 11 (Variable)


State 27

   39 StmtBlock: '{' . VarDecls StmtList '}'

    $default  reduce using rule 10 (VarDecls)

    VarDecls  go to state 34


State 28

   18 FnDecl: FnHeader StmtBlock .

    $default  reduce using rule 18 (FnDecl)


State 29

   20 FnHeader: T_Void T_Identifier '(' . Formals ')'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 22 (Formals)

    Variable    go to state 35
    Type        go to state 36
    Formals     go to state 37
    FormalList  go to state 38


State 30

   26 ExtendOption: T_Extends . T_Identifier

    T_Identifier  shift, and go to state 39


State 31

   25 ClassDecl: T_Class T_Identifier ExtendOption . ImplementOpt '{' FieldList '}'

    T_Implements  shift, and go to state 40

    $default  reduce using rule 29 (ImplementOpt)

    ImplementOpt  go to state 41


State 32

   36 InterfaceDecl: T_Interface T_Identifier '{' . PrototypeList '}'

    $default  reduce using rule 38 (PrototypeList)

    PrototypeList  go to state 42


State 33

   19 FnHeader: Type T_Identifier '(' . Formals ')'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 22 (Formals)

    Variable    go to state 35
    Type        go to state 36
    Formals     go to state 43
    FormalList  go to state 38


State 34

    9 VarDecls: VarDecls . VarDecl
   39 StmtBlock: '{' VarDecls . StmtList '}'

    '-'               shift, and go to state 44
    '!'               shift, and go to state 45
    T_Bool            shift, and go to state 2
    T_Int             shift, and go to state 3
    T_Double          shift, and go to state 4
    T_String          shift, and go to state 5
    T_Null            shift, and go to state 46
    T_This            shift, and go to state 47
    T_While           shift, and go to state 48
    T_For             shift, and go to state 49
    T_If              shift, and go to state 50
    T_Return          shift, and go to state 51
    T_Break           shift, and go to state 52
    T_New             shift, and go to state 53
    T_NewArray        shift, and go to state 54
    T_Print           shift, and go to state 55
    T_ReadInteger     shift, and go to state 56
    T_ReadLine        shift, and go to state 57
    T_Identifier      shift, and go to state 58
    T_StringConstant  shift, and go to state 59
    T_IntConstant     shift, and go to state 60
    T_DoubleConstant  shift, and go to state 61
    T_BoolConstant    shift, and go to state 62
    '('               shift, and go to state 63
    '{'               shift, and go to state 27

    ';'       reduce using rule 51 (OptExpr)
    $default  reduce using rule 41 (StmtList)

    VarDecl     go to state 64
    Variable    go to state 13
    Type        go to state 36
    StmtBlock   go to state 65
    StmtList    go to state 66
    Stmt        go to state 67
    OptExpr     go to state 68
    IfStmt      go to state 69
    IfThenStmt  go to state 70
    IfElseStmt  go to state 71
    WhileStmt   go to state 72
    ForStmt     go to state 73
    ReturnStmt  go to state 74
    BreakStmt   go to state 75
    PrintStmt   go to state 76
    Expr        go to state 77
    LValue      go to state 78
    Call        go to state 79
    Constant    go to state 80


State 35

   24 FormalList: Variable .

    $default  reduce using rule 24 (FormalList)


State 36

   11 Variable: Type . T_Identifier
   17 Type: Type . T_Dims

    T_Dims        shift, and go to state 25
    T_Identifier  shift, and go to state 81


State 37

   20 FnHeader: T_Void T_Identifier '(' Formals . ')'

    ')'  shift, and go to state 82


State 38

   21 Formals: FormalList .
   23 FormalList: FormalList . ',' Variable

    ','  shift, and go to state 83

    $default  reduce using rule 21 (Formals)


State 39

   26 ExtendOption: T_Extends T_Identifier .

    $default  reduce using rule 26 (ExtendOption)


State 40

   28 ImplementOpt: T_Implements . ImplementList

    T_Identifier  shift, and go to state 84

    ImplementList  go to state 85


State 41

   25 ClassDecl: T_Class T_Identifier ExtendOption ImplementOpt . '{' FieldList '}'

    '{'  shift, and go to state 86


State 42

   36 InterfaceDecl: T_Interface T_Identifier '{' PrototypeList . '}'
   37 PrototypeList: PrototypeList . FnHeader ';'

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 87

    Type      go to state 88
    FnHeader  go to state 89


State 43

   19 FnHeader: Type T_Identifier '(' Formals . ')'

    ')'  shift, and go to state 90


State 44

   72 Expr: '-' . Expr

    '-'               shift, and go to state 44
    '!'               shift, and go to state 45
    T_Null            shift, and go to state 46
    T_This            shift, and go to state 47
    T_New             shift, and go to state 53
    T_NewArray        shift, and go to state 54
    T_ReadInteger     shift, and go to state 56
    T_ReadLine        shift, and go to state 57
    T_Identifier      shift, and go to state 91
    T_StringConstant  shift, and go to state 59
    T_IntConstant     shift, and go to state 60
    T_DoubleConstant  shift, and go to state 61
    T_BoolConstant    shift, and go to state 62
    '('               shift, and go to state 63

    Expr      go to state 92
    LValue    go to state 78
    Call      go to state 79
    Constant  go to state 80


State 45

   81 Expr: '!' . Expr

    '-'               shift, and go to state 44
    '!'               shift, and go to state 45
    T_Null            shift, and go to state 46
    T_This            shift, and go to state 47
    T_New             shift, and go to state 53
    T_NewArray        shift, and go to state 54
    T_ReadInteger     shift, and go to state 56
    T_ReadLine        shift, and go to state 57
    T_Identifier      shift, and go to state 91
    T_StringConstant  shift, and go to state 59
    T_IntConstant     shift, and go to state 60
    T_DoubleConstant  shift, and go to state 61
    T_BoolConstant    shift, and go to state 62
    '('               shift, and go to state 63

    Expr      go to state 93
    LValue    go to state 78
    Call      go to state 79
    Constant  go to state 80


State 46

  101 Constant: T_Null .

    $default  reduce using rule 101 (Constant)


State 47

   64 Expr: T_This .

    $default  reduce using rule 64 (Expr)


State 48

   56 WhileStmt: T_While . '(' Expr ')' Stmt

    '('  shift, and go to state 94


State 49

   57 ForStmt: T_For . '(' OptExpr ';' Expr ';' OptExpr ')' Stmt

    '('  shift, and go to state 95


State 50

   54 IfThenStmt: T_If . '(' Expr ')' Stmt
   55 IfElseStmt: T_If . '(' Expr ')' Stmt T_Else Stmt

    '('  shift, and go to state 96


State 51

   58 ReturnStmt: T_Return . OptExpr ';'

    '-'               shift, and go to state 44
    '!'               shift, and go to state 45
    T_Null            shift, and go to state 46
    T_This            shift, and go to state 47
    T_New             shift, and go to state 53
    T_NewArray        shift, and go to state 54
    T_ReadInteger     shift, and go to state 56
    T_ReadLine        shift, and go to state 57
    T_Identifier      shift, and go to state 91
    T_StringConstant  shift, and go to state 59
    T_IntConstant     shift, and go to state 60
    T_DoubleConstant  shift, and go to state 61
    T_BoolConstant    shift, and go to state 62
    '('               shift, and go to state 63

    $default  reduce using rule 51 (OptExpr)

    OptExpr   go to state 97
    Expr      go to state 77
    LValue    go to state 78
    Call      go to state 79
    Constant  go to state 80


State 52

   59 BreakStmt: T_Break . ';'

    ';'  shift, and go to state 98


State 53

   86 Expr: T_New . '(' T_Identifier ')'

    '('  shift, and go to state 99


State 54

   87 Expr: T_NewArray . '(' Expr ',' Type ')'

    '('  shift, and go to state 100


State 55

   60 PrintStmt: T_Print . '(' ExprList ')' ';'

    '('  shift, and go to state 101


State 56

   84 Expr: T_ReadInteger . '(' ')'
